# ppt-shuffle

./: Procfile  README.md  pyproject.toml  requirements.txt  runserver.py
ppt_shuffle/: __init__.py  util.py  views.py
ppt_shuffle/templates/: index.html
