[tool.poetry]
name = "ppt-shuffle"
version = "0.1.0"
description = "Shuffle PowerPoint slides (to make flashcards). Function very similarly to pdf-shuffle."
authors = ["patarapolw <patarapolw@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
python-pptx = "^0.6.15"
flask = "^1.0"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
